--- a/notebooks/madrid_real_estate_investment_analysis.ipynb
+++ b/notebooks/madrid_real_estate_investment_analysis.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "712992a9",
+   "id": "3d64b39b",
    "metadata": {},
    "source": [
-    "## RAPADA PARTNERS - CASE STUDY - Madrid´s Real Estate Market"
+    "# Madrid Real Estate Investment Analytics – Case Study\n",
+    "\n",
+    "## Context\n",
+    "This notebook supports a technical case study focused on data-driven investment analysis.\n",
+    "The objective is to identify patterns, undervalued assets and risk indicators across Madrid’s real estate market.\n",
+    "\n",
+    "Although the domain is real estate, the analytical workflow mirrors approaches commonly used in fintech and AML contexts, including segmentation, anomaly detection and risk assessment.\n",
+    "\n",
+    "## Contents\n",
+    "- Data loading and preprocessing\n",
+    "- Exploratory data analysis (EDA)\n",
+    "- Feature engineering\n",
+    "- Market segmentation (sales vs rentals)\n",
+    "- Predictive modeling and evaluation\n",
+    "\n",
+    "For a business-oriented summary of results and insights, please refer to the accompanying PDF report.\n"
    ]
   },
   {
